--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
               <h1>Sign Up</h1>
               </div>
               <div class="modal-body">
-                  <form action="signup" method="POST">
+                  <form action="/user" method="POST">
                       <input type="text" name="name" placeholder="name">
                       <input type="email" name="name" placeholder="email">
                       <input type="password" name="password" placeholder="password">
