--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,31 +1,10 @@
-
-<div class="modal">
-    <div class="modal-content">
-        <div class="modal-header">
-        <h1>Log In</h1>
-        </div>
-        <div class="modal-body">
-            <form action="login" method="POST">
-                <input type="text" name="name" placeholder="name">
-                <input type="password" name="password" placeholder="password">
-            </form>
-        </div>
-    </div>
-</div>
-
-<div class="modal">
-    <div class="modal-content">
-        <div class="modal-header">
-        <h1>Sign Up</h1>
-        </div>
-        <div class="modal-body">
-            <form action="signup" method="POST">
-                <input type="text" name="name" placeholder="name">
-                <input type="email" name="name" placeholder="email">
-                <input type="password" name="password" placeholder="password">
-                <input type="password" name="passwordcheck" placeholder="password check">
-            </form>
-        </div>
-    </div>
-</div>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+    <link rel="stylesheet" href="css/style.css"/>
+</head>
+<body>
+    <h1>hello</h1>
+</body>
+</html>
