added video ejs and controller

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
       </div>
       <section>
         <article class="">
-          <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+          <video src="videofile.ogg"  poster="posterimage.jpg">
 
           </video>
         </article>
@@ -30,6 +30,7 @@
       </section>
       <section>
         <!--horizontal video viewer-->
+        <!-- show more -->
       </section>
     </main>
   </body>
