--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,15 +9,15 @@
     <header>
       <nav>
         <button class="sign-up-btn">sign up</button>
-        <div class="modal">
+        <div class="modal modal-signup">
           <div class="modal-content">
               <div class="modal-header">
               <h1>Sign Up</h1>
               </div>
               <div class="modal-body">
-                  <form action="/user" method="POST">
+                  <form action="/user/signup" method="POST">
                       <input type="text" name="name" placeholder="name">
-                      <input type="email" name="name" placeholder="email">
+                      <input type="email" name="email" placeholder="email">
                       <input type="password" name="password" placeholder="password">
                       <input type="password" name="passwordcheck" placeholder="password check">
                       <button class="sign-up-modal">Sign Up</button>
@@ -26,13 +26,13 @@
           </div>
         </div>
         <button class="log-in-btn">Log in</button>
-        <div class="modal">
+        <div class="modal modal-login">
           <div class="modal-content">
               <div class="modal-header">
               <h1>Log In</h1>
               </div>
               <div class="modal-body">
-                  <form action="login" method="POST">
+                  <form action="/user/login" method="POST">
                       <input type="text" name="name" placeholder="name">
                       <input type="password" name="password" placeholder="password">
                       <button class="log-in-modal">Log In</button>
