added video controller and ejs files

--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,9 @@
         <!--horizontal video viewer-->
         <!-- show more -->
       </section>
+      <nav>
+        <button>Show more</button>
+      </nav>
     </main>
   </body>
 </html>
