--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -36,7 +36,8 @@
                             <h1>Upload your Video!</h1>
                         </div>
                         <div class="modal-body">
-                            <form action="/user" method="POST">
+                            <form action="/video/<%=user._id%>" method="POST">
+                                <input type="text" name="user" value="<%=user.name%>" class="upload-creator">
                                 <input type="text" name="url" placeholder="url">
                                 <input type="text" name="title" placeholder="title">
                                 <input type="text" name="info" placeholder="info">
