added delete routes

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -22,7 +22,7 @@
                 <ul>
                     <%for(let i = 0; i < user.video.length; i++) {%>
                         <li>
-                            <h1></h1>
+                            <h1>video[i].length</h1>
                             <form action="/user/:id/deletevideo?_method=DELETE" method="POST"
                                 <button>Delete</button>
                             </form>
