--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Projecy</title>
+    <script src="https://kit.fontawesome.com/5af6d749d4.js"></script>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <header>
+    <header> 
+    <button class="ham-btn"><i class="fas fa-bars hamburger"></i></button>
       <nav>
         <button class="sign-up-btn">sign up</button>
         <div class="modal modal-signup">
@@ -25,7 +27,6 @@
               </div>
           </div>
         </div>
-        <button class="log-in-btn">Log in</button>
         <div class="modal modal-login">
           <div class="modal-content">
               <div class="modal-header">
