--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,10 +10,12 @@
 }
 
 header {
-        background: #03A9F4;
-        color: white;
-        height: 65px;
-        letter-spacing: 5px;
+    background: #03A9F4;
+    color: white;
+    height: 65px;
+    letter-spacing: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
@@ -22,7 +24,6 @@ nav {
 
 header h1 {
     text-align: center;
-    padding-top: 5px;
     position: relative;
     font-size: 3em;
 }
@@ -55,6 +56,7 @@ header h1 {
 .modal-body {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .modal p {
@@ -75,6 +77,7 @@ header h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 
@@ -93,7 +96,7 @@ header h1 {
 .ham-btn {
     border: 0px;
     background: none;
-    float: right;
+    text-align: right;
 }
 
 .edit-btn {
@@ -121,10 +124,6 @@ input:hover, .btn:hover {
     display: none;
 }
 
-/*   achor tags    */
-
-
-/*  user index  */
 
 section {
     display: flex;
@@ -134,8 +133,26 @@ section {
 
 section article {
     margin: 1% auto;
-    border: 1px solid;
     width: 95%;
+}
+
+/*  home index  */
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.filter-div {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+
+.vid-info-home {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 /*  KEY FRAMES  */
