--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,17 +10,12 @@
 }
 
 header {
-
     background: #03A9F4;
     color: white;
     height: 65px;
     letter-spacing: 5px;
     display: flex;
     flex-direction: column;
-        background: #03A9F4;
-        color: white;
-        height: 65px;
-        letter-spacing: 5px;
 }
 
 nav {
@@ -29,9 +24,16 @@ nav {
 
 header h1 {
     text-align: center;
-    padding-top: 5px;
     position: relative;
     font-size: 3em;
+}
+
+iframe {
+    border: 0px;
+}
+
+li {
+    list-style: none;
 }
 
 /*  MODAL */
@@ -63,7 +65,6 @@ header h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .modal p {
@@ -110,28 +111,6 @@ header h1 {
     align-self: center;
 }
 
-
-.edit-form{
-    display: none;
-}
-
-/*  Button Input  */
-
-.hamburger {
-    background: #03a9f4;
-    color: white;
-    font-size: 24px;
-}
-
-.ham-btn {
-    border: 0px;
-    background: none;
-    float: right;
-}
-
-.edit-btn {
-    align-self: center;
-}
 input, .btn {
     text-align: center;
     width: 80%;
@@ -152,13 +131,6 @@ input:hover, .btn:hover {
 .edit-form{
     display: none;
 }
-
-
-
-/*   achor tags    */
-
-
-/*  user index  */
 
 
 section {
@@ -189,11 +161,7 @@ main {
 .vid-info-home {
     display: flex;
     justify-content: space-evenly;
-
-    border: 1px solid;
-    width: 95%;
 }
-
 
 /*  KEY FRAMES  */
 
