fixed class names for root index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,10 +50,10 @@
       </div>
       <section>
         <article>
-            <div class="upload-div">
+            <div class="popular-div">
                 <h1>Top Vid</h1>
             </div>
-            <div class="user-video">
+            <div class="popular-video">
                 <iframe src="https://youtube.com/embed/<%=likedVideo.url%>"></iframe>
                 <div>
                     <span><%=likedVideo.title%></span>
