--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -2,12 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Projecy</title>
+    <script src="https://kit.fontawesome.com/5af6d749d4.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <p>show user partial</p>
-    <p>show selected video</p>
-    <p>show video list aside?</p>
-    <p>likes will have to count user AND video total</p>
+
+
+    <script src="js/videoShow.js"></script>
   </body>
 </html>
+
