--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,8 @@ header h1 {
 }
 
 iframe {
+    width: 100%;
+    height: 230px;
     border: 0px;
 }
 
@@ -128,6 +130,10 @@ input:hover, .btn:hover {
     box-shadow: 0 0 5px #2196F3;
 } 
 
+.upload-btn {
+    width: 23%;
+}
+
 .edit-form{
     display: none;
 }
@@ -139,9 +145,40 @@ section {
     align-items: center;
 }
 
+article:nth-child(1) {
+    border-bottom: 2px solid;
+    padding-bottom: 4px;
+}
+
 section article {
     margin: 1% auto;
     width: 95%;
+}
+
+.center-art {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+/*  user index  */
+
+.user-vid {
+    width: 90%;
+}
+
+.info-div {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.user-vid-list {
+    margin-top: 3px;
+}
+
+.user-vid-list button {
+    width: 23%;
 }
 
 /*  home index  */
